Fix error-bar class so that overflow enlarges container vertically and moves existing sections accordingly

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -31,7 +31,10 @@
 }
 
 .error-bar {
-  width: 100%;
+  z-index: 1;
+  width: 90vw;
+  vertical-align: middle;
+  line-height: 1.4em;
   text-align: center;
   color: #721c24;
   background-color: #db677099;
